tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_before_declare_str.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
var x:str = "Hello"

